<resources>
    <string name="app_name">iPredict</string>

    <string name="action_signIn">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_home">Home</string>
    <string name="action_browse">Browse Predictions</string>
    <string name="action_about">About Us</string>
    <string name="action_help">Help</string>
    <string name="action_forum">Forum</string>
    <string name="action_rankings">Rankings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="second_activity_title">Second Activity</string>
    <string name="content">Coming Soon...?</string>
    <string name="start">Start Trading</string>
    <string name="title_activity_browse_prediction">Browse Prediction</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="submit_message">Submit</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="about_us_description">
        Established in 2008, iPredict ran as a political prediction market during the eight weeks
        prior to the election that year. It proved more accurate than three quarters of all
        political polls published in the run up to the election, confirming the effectiveness of
        money prediction markets.\n\n Since then, iPredict has accumulated over 4000 traders and
        has launched more than 7000 contracts, covering a wide variety of topics, from monthly gold
        prices, to the discovery of extraterrestrial life. \n\n So, put your money where your mouth
        is and begin trading today!
    </string>
    <string name="what_is_ipredict">
        iPredict is a New Zealand prediction market that offers prediction exchanges on current events,
        political issues and economic issues. iPredict is jointly owned by the New Zealand Institute
        for the Study of Competition and Regulation and Victoria University of Wellington.
    </string>
    <string name="test_your_knowledge">
        Use your opinions or inside knowledge to trade on the outcome of a prediction.
    </string>
    <string name="earn_real_money">
        Some of our traders have earned returns of over 2000%. You can start today with
        as little as $5.
    </string>
    <string name="over_100_predictions">
        Our markets cover a broad range of hot topics in the areas of politics, economics
        and social issues.
    </string>
    <string name="trade_anywhere">
        Access iPredict from anywhere, either through your mobile, tablet or desktop computer.
    </string>
    <string name="quote1">
        \"This is a quote from an iPredict user\"
    </string>
        <string name="quote2">
        \"This is a quote from an iPredict user\"
    </string>
    <string name="frontpage">
        TRADE STOCKS IN
        FUTURE POLITICAL &amp;
        ECONOMIC EVENTS
    </string>
    <string name="title_activity_search_prediction">searchPrediction</string>
    <string name="title_activity_show_result">ShowResult</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="desc">Some text to represent the image</string>
    <string name="contactus">CONTACT US</string>
    <string name="team">TEAM</string>
    <string name="aboutus">ABOUT US</string>
    <string name="search">SEARCH</string>
    <string name="browse">BROWSE</string>
    <string name="sortby">SORT BY</string>
    <string name="clear">CLEAR</string>
    <string name="tradingname">Trading Name:</string>
    <string name="password">"Password:</string>
    <string name="privacy">TERMS &amp; PRIVACY</string>
    <string name="copyright">&#169; 2015 iPredict Limited</string>
    <string name="proudlysupport">Proudly Supported by</string>
    <string name="tradenow">TRADE NOW</string>
    <string name="startnow">START TODAY \n WITH A FREE ACCOUNT</string>
    <string name="ourusers">WHAT DO OUR USERS THINK?</string>
    <string name="realmoney">EARN REAL \n MONEY</string>
    <string name="knowledge">TEST YOUR \n KNOWLEDGE</string>
    <string name="trade">TRADE \n ANYWHERE</string>
    <string name="predictions">OVER 100 \n PREDICTIONS</string>
    <string name="whyipredict">WHY USE IPREDICT?</string>
    <string name="whatipredict">WHAT IS IPREDICT?</string>
    <string name="contractinfo">CONTRACT INFO</string>
    <string name="longdes">LONG DESCRIPTION</string>
    <string name="stockhistory">STOCK HISTORY</string>
    <string name="currentorders">CURRENT ORDERS</string>
    <string name="toptenbuy">Current top 10 buy orders</string>
    <string name="stocks">Stocks</string>
    <string name="prices">Price(ea)</string>
    <string name="title_activity_my_portfolio">myPortfolio</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="under_construction">This page is currently under construction</string>
</resources>
