<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_signIn"
        android:title="@string/action_signIn"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_register"
        android:title="@string/action_register"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_browse"
        android:title="@string/action_browse"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_forum"
        android:title="@string/action_forum"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_rankings"
        android:title="@string/action_rankings"
        app:showAsAction="never" />

<!--
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
-->

</menu>
